# deep-rl-class

./: .gitignore
notebooks/bonus-unit1/: .gitignore  bonus-unit1.ipynb  pixi.toml
notebooks/unit1/: pixi.toml  unit1.ipynb
notebooks/unit2/: .gitignore  pixi.toml  unit2.ipynb
notebooks/unit3/: .gitignore  dqn.yml  unit3.ipynb
notebooks/unit4/: pixi.toml  unit4.ipynb
notebooks/unit5/: .gitignore  pixi.toml  unit5.ipynb
notebooks/unit5/config/ppo/: SnowballTarget.yaml
notebooks/unit6/: .gitignore  unit6.ipynb
personal_tests/gym/: .gitignore  main.py  pixi.toml
personal_tests/q_learning/: main.py
personal_tests/q_learning_mojo/: pyproject.toml
personal_tests/q_learning_mojo/src/q_learning_mojo/: main.mojo
personal_tests/unit2_bis/: main.py  pixi.toml
personal_tests/unit2_python/: main.py  pixi.toml
personal_tests/unit4/: .gitignore  main.py  pixi.toml  reinforce_algorithm.py
personal_tests/unit6/: main.py  pixi.toml
personal_tests/unit8/: .gitignore  pixi.toml  vizdoom_ppo.py
personal_tests/unit_2_mojo/: .gitignore  vscode_debug.sh
personal_tests/unit_2_python/: main.py
runs/ALE/Breakout-v5__main__1__1747048807/: events.out.tfevents.1747048807.rog.212758.0
runs/ALE/Breakout-v5__main__1__1747049065/: events.out.tfevents.1747049065.rog.214850.0
runs/ALE/Breakout-v5__main__1__1747049130/: events.out.tfevents.1747049130.rog.218173.0
runs/ALE/Breakout-v5__main__1__1747049213/: events.out.tfevents.1747049213.rog.221566.0
runs/BreakoutNoFrameskip-v4__main__1__1747048532/: events.out.tfevents.1747048532.rog.210708.0
(+11 files in other folders)
