[project]
authors = [{ name = "Tuatini Godard", email = "email@tuatini.me" }]
dependencies = []
name = "q_learning_mojo"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.black]
line-length = 99

[tool.pixi.project]
channels = [
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
    "conda-forge",
]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.dependencies]
max = "25.4.*"
pytorch = "*"
matplotlib = ">=3.10.1,<4"
opencv = ">=4.11.0,<5"
imageio = ">=2.37.0,<3"
tqdm = ">=4.67.1,<5"
imageio-ffmpeg = ">=0.6.0,<0.7"

[tool.pixi.pypi-dependencies]
q_learning_mojo = { path = ".", editable = true }
pillow = "*"
gymnasium = { version = "*", extras = ["box2d"] }
ale-py = "*"
